Fix overflow. Fix polyfills. Fix comments and semi.

--- a/frontend/static/css/yourworld.css
+++ b/frontend/static/css/yourworld.css
@@ -232,6 +232,7 @@ a:visited {
     height: 243px;
     overflow: scroll;
     overflow-x: hidden;
+    overflow-wrap: break-word;
 }
 .unread {
     color: red;
